force-app/main/default/objects/Change_Request__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If request was created by EAN Staff, here we can see for what contact (community user) it was created</description>
    <label>Community Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Change Requests (Contact)</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>