force-app/main/default/objects/Change_Request__c/fields/Event_custom__c.field-meta.xml
<CustomField>
    <fullName>Event_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Custom</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>