force-app/main/default/objects/Change_Request__c/fields/Event_Participation__c.field-meta.xml
<CustomField>
    <fullName>Event_Participation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Participation</label>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>