force-app/main/default/objects/Change_Request__c/fields/Event_Registration_Group__c.field-meta.xml
<CustomField>
    <fullName>Event_Registration_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Registration Group</label>
    <referenceTo>Event_Registration_Group__c</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>