force-app/main/default/objects/Change_Request__c/fields/TransferFromContact__c.field-meta.xml
<CustomField>
    <fullName>TransferFromContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer from Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Change Requests</relationshipLabel>
    <relationshipName>Change_Requests_From</relationshipName>
    <type>Lookup</type>
</CustomField>