force-app/main/default/objects/Change_Request__c/fields/TransferFromEmail__c.field-meta.xml
<CustomField>
    <fullName>TransferFromEmail__c</fullName>
    <label>Transfer from Email</label>
    <type>Email</type>
</CustomField>