force-app/main/default/objects/Change_Request__c/fields/TransferToContact__c.field-meta.xml
<CustomField>
    <fullName>TransferToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Change Requests (Transfer to Contact)</relationshipLabel>
    <relationshipName>Change_Requests_To</relationshipName>
    <type>Lookup</type>
</CustomField>