force-app/main/default/objects/Change_Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>ADD NEW VALUES TO
changeRequestComponent.js
myRegistrationsComponent.js
ChangeRequestController.cls
MyRegistrationsController.cls</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solo Registration Cancellation</fullName>
            </value>
            <value>
                <fullName>Full Group Registration Cancellation</fullName>
            </value>
            <value>
                <fullName>Group Registration Transfer</fullName>
            </value>
            <value>
                <fullName>Individual Participant Group Registration Cancellation</fullName>
            </value>
            <value>
                <fullName>Solo Registration Transfer</fullName>
                <isActive>false</isActive>
                <label>Solo Registration Transfer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>