force-app/main/default/objects/Change_Request__c/listViews/Open_CR.listView-meta.xml
<ListView>
    <fullName>Open_CR</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Open CR</label>
</ListView>